[package]
name = "valida-secp256k1"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
const-hex = "1.14.0"
num-bigint = "0.4.6"
num-traits = "0.2.18"
lazy_static = "1.5.0"
valida-intrinsics = { git = "https://github.com/lita-xyz/valida-intrinsics.git", rev = "9a954d056eedec7d4506729cca84dbcc226c47c7" }
