[package]
name = "valida-secp256k1"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
const-hex = "1.14.0"
ff = "0.13"
valida-intrinsics = { git = "https://github.com/lita-xyz/valida-intrinsics.git", rev = "9a954d056eedec7d4506729cca84dbcc226c47c7" }
k256 = { version = "0.13.4", default-features = false, features = ["expose-field", "arithmetic"] }
